fix z-index

--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -1257,7 +1257,6 @@ $commodities: #e98300;
 
   background: $dark;
   -webkit-font-smoothing: antialiased;
-  z-index: 1000;
   position: fixed;
   bottom: 0;
   left: 0;
